Pic alignment fix

--- a/style.css
+++ b/style.css
@@ -184,6 +184,9 @@ li span {
   #dogPic {
     left: 5%;
   }
+  .title {
+    margin: 0;
+  }
 }
 @media only screen and (max-width: 1244px) {
   #list {
